projects/compiler/test/typechecker/indexing/tuple_error_negative.abra
val t = (1, "two", [3])

t[-2]